--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-attrdict==2.0.0
-numpy==1.14.5
-Pillow==6.2.0
-pkg-resources==0.0.0
-six==1.11.0
-torch==0.4.0
-torchvision==0.2.1
+scripts/attrdict-2.0.1-py2.py3-none-any.whl
+numpy
+Pillow
+pkg-resources
+six
+torch
+torchvision
